# Ophir

./: README.md  package-lock.json
backend/: Cargo.toml  finance.db  requirements.txt
backend/app/: main.py
backend/app/services/: quote.py
backend/migrations/: 20250816154511_init.sql
backend/src/: main.rs
backend/src/criteria/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: finance.rs  mod.rs
backend/src/services/: fundamentals.rs
backend/src/utils/: cors.rs  mod.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: Footer.tsx  Login.tsx  Navbar.tsx  Nodes.tsx  ProtectedRoute.tsx  Register.tsx  Sidebar.tsx
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: '  About.tsx  Applications.tsx  Dash.tsx  FinanceDashboard.tsx  Home.tsx  NotFound.tsx  Services.tsx
frontend/src/styles/: FinanceDashboard.css  global.css  services.css
